# mcp-knowledge-server-template

./: .gitignore  AGENTS.md  Dockerfile  README.md  mcp-server.json  pyproject.toml
.github/workflows/: check-knowledge-freshness.yml  refresh-knowledge.yml
knowledge/: sources.json
knowledge/example-topic/: example.json  example.md
scripts/: crawl_docs.py
src/mcp_knowledge/: __init__.py  config.py  knowledge.py  server.py
tests/: test_knowledge.py  test_server.py
