[project]
name = "mcp-knowledge-server"
version = "0.1.0"
description = "Template MCP server for domain-specific knowledge bases"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "thefuzz[speedup]",
]

[project.scripts]
mcp-knowledge-server = "mcp_knowledge.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
